2001-05-18  Jody Goldberg <jgoldberg@home.com>

	* dialog-cell-format.c (draw_format_preview) : be sure to insert
	  spaces after the repeat characters
	(cb_format_currency_select) : Only draw negative samples for number &
	  currency.  Not accounting.

2001-05-15  Jon K Hellan  <hellan@acm.org>
 
 	* dialog-define-names.c (dialog_define_names): Ensure only one
 	guru per workbook.
 
 	* dialog-search-replace.c (dialog_search_replace): Ditto.
 
 	* dialog-printer-setup.c (dialog_printer_setup): Ditto.
 
2001-05-14  Jody Goldberg <jgoldberg@home.com>

	* dialog-cell-format.c (fmt_dialog_impl) : move the containment logic
	  from here.
	(setup_color_pickers) : to here.  Adjust the aligment and add a frame.

2001-05-14  Almer S. Tigelaar  <almer@gnome.org>
 
 	* dialog-cell-format.c
	(cb_custom_back_selected): Remove, We use colorcombo's now.
 	(cb_auto_color_selected): Idem.
 	(cb_custom_color_selected): Idem.
 	(cb_back_preview_color): Adjust for new colorcombo usage.
 	(cb_pattern_preview_color): Idem.
 	(cb_font_preview_color): Idem.
 	(cb_border_color): Idem.
 	(setup_color_pickers): Change entirely for
 	colorcombo support.
 	(draw_pattern_preview): Remove old colorpicker
 	code and update for the new situation.
 	(fmt_dialog_impl): Update for new situation in
 	case there's no back.
 
2001-05-10  Almer S. Tigelaar  <almer@gnome.org>

	* dialog-advanced-filter.c : include dialogs.h
	to supress warning.
	
	* dialog-cell-sort.c (string_pos_in_list): Cast pointer
	from untyped to char *.

	* dialog-function-wizard.c (formula_guru_set_expr): Fix
	signedness by changing variable decl and some casts.
	(cb_formula_guru_entry_focus_in): Fix signedness by casting,
	we don't want to pollute our data structures with unsigned
	integers.
	(formula_guru_init): Fix signedness by changing decl.

	* dialog-stf-fixed-page.c (fixed_page_autodiscover):
	Fix signedness by changing decl.

	* dialog-stf-preview.c (stf_preview_get_table_pixel_width):
	Fix signedness by changing decl.